# jupyter_v4

./: .env.example  .gitignore  01_embed_documents_chroma.ipynb  2026-06-19-v5-input-guardrail-handoff.md  NOTEBOOK_GUIDE.md  manufacturing_agent_v6.ipynb  manufacturing_agent_v6.md  memory_context_engineering_notes.md  pyproject.toml
api/routers/: users.py
document/haas/: Mill Chatter - Troubleshooting - TG0100.html  Mill Spindle - Troubleshooting Guide - TG0101.html  Vector Drive - Troubleshooting Guide - CHC - TG0157.html  Vector Drive - Troubleshooting Guide - NGC - TG0158.html
document/osha/: emergency_action_plan_1910_38.html  emergency_action_plan_etool.html  loto_1910_147.html  loto_overview.html  machine_guarding_1910_212.html  machine_guarding_overview.html
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: CreateUserModal.jsx  Sidebar.jsx
manufacturing_agent/memory/: registry.py  store.py
x/: IMPROVEMENTS.md
